# blog_writer_project

./: README.md  app.py  helper.py  main.py  pyproject.toml  requirements.txt
medium_articals/: AI_use_in_tech.md  ai_research_article.md  data.md  ds.md  ff.md  fg.md  final.md  mm.md  mmmm.md
research_paper/: arxiv_research_agent_write a artical about ai.txt  arxiv_research_agent_write_about_artical_machine_learning.txt  arxiv_research_agent_write_artical_about_AI.txt  arxiv_research_agent_write_artical_about_AI_in_software_industry_.txt  hackernews_research_agent_write_artical_about_AI.txt  hackernews_research_agent_write_artical_about_AI_in_software_industry_.txt  newspaper_research_agent_exit_.txt  newspaper_research_agent_write_a_artical_about_ai.txt  newspaper_research_agent_write_a_artical_about_ai_in_healthcare_.txt  newspaper_research_agent_write_a_artical_about_data_science.txt  newspaper_research_agent_write_a_artical_about_machine_learning.txt  newspaper_research_agent_write_a_artical_about_real_estate.txt  newspaper_research_agent_write_a_artical_ai.txt  newspaper_research_agent_write_about_artical_machine_learning.txt  newspaper_research_agent_write_artical_about_AI_in_software_industry_.txt  web_search_agent_exit_.txt  web_search_agent_write_a_artical_about_ai.txt  web_search_agent_write_a_artical_about_ai_in_healthcare_.txt  web_search_agent_write_a_artical_about_data_science.txt  web_search_agent_write_a_artical_about_machine_learning.txt  web_search_agent_write_a_artical_about_real_estate.txt  (+3 more)
