[project]
name = "project-artical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.3.24",
    "fastapi[standard]>=0.128.0",
    "google-search-results>=2.4.2",
    "lxml-html-clean>=0.4.3",
    "newspaper4k>=0.9.4.1",
    "ollama>=0.6.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
]
